2009-05-12 Michael Klapper <michael.klapper@aoemedia.de>
	* Add 'tx_l10nmgr_service_textConverter'
	* Replace the old xmltools with "tx_l10nmgr_service_textConverter" on "tx_l10nmgr_domain_translationFactory".
	* Replace the old xmltools with "tx_l10nmgr_service_textConverter" on "tx_l10nmgr_CATXMLView", improve Exception handling.
	* Add test for "tx_l10nmgr_service_textConverter"
	* Fix testcase "class.tx_l10nmgr_models_exporter_exporter_complex_testcase.php" on excepted value.
	* Update code indention "tx_l10nmgr_models_importer_importData_testcase".
	* Fix testcase "class.tx_l10nmgr_domain_translationFactory_xmlData_testcase.php", "class.tx_l10nmgr_service_importTranslation_headertest_testcase.php", "class.tx_l10nmgr_service_importTranslation_basic_testcase.php", "class.tx_l10nmgr_mixed_completeWorkflow_testcase.php" update expected value.
	
2009-05-04 Michael Klapper <michael.klapper@aoemedia.de>
	* Refactor the translation package
	  - Disable the markImported() 
	  - Optimize and cache the isImported state including their polling
	  - Keep attention on the fields who are marked as skipped
	* Add tests for the translation package
	* Rename method call "tx_l10nmgr_interface_stateImportable::markAsImported" to "tx_l10nmgr_interface_stateImportable::markImported" 

2009-04-29 Michael Klapper <michael.klapper@aoemedia.de>
	* Replace class tx_l10nmgr_models_importer_importService with tx_l10nmgr_service_importTranslation
	* Update PHPdoc of domain/translation package
	* Rename some methods from the translatable package to be compatible to the translation package 
	* Improve the translation package testcases
	* Rename interface package
	* Rename existing interfaces to the new package name
	* Add new Interface interface.tx_l10nmgr_interface_stateImportable.php
	* Package translatable: update code indention, PHPdoc, add some command processing informations to the class "tx_l10nmgr_models_translateable_translateableField"